@@ -1,3 +1,4 @@
+* Make ModelView.parse_view public
 * Add help for each value to selection and multiselection
 * Use safe_join in SharedDataMiddlewareIndex (issue10068)
 * Use menu name for window opened from menu
